--- a/analysis/multi_group_6traits_15weights_ukbb_munro.Rmd
+++ b/analysis/multi_group_6traits_15weights_ukbb_munro.Rmd
@@ -300,6 +300,16 @@ The results are summarized by
 
 We compared number of significant genes, overlapping genes. The earlier results are here: https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb.html
 
+## Sigificant gene compare summary
+
+|     | sig_gene_current  | sig_gene_earlier  | sig_gene_overlap | groupsize_eqtl_current   | groupsize_eqtl_earlier       | groupsize_sqtl_current   | groupsize_sqtl_earlier         | groupsize_apaqtl_current | groupsize_apaqtl_earlier |
+|-----|-------------------|-------------------|------------------|--------------------------|------------------------------|--------------------------|--------------------------------|--------------------------|--------------------------|
+| ibd | 29                | 32                | 9                | 6034-5060-5880-5700-3931 | 9791-8784-9944-9984-8896     | 7198-5497-8911-6912-4261 | 24290-16109-28632-24379-19217  | 6789-4705-7036-5922-3955 | 1503-1973-1568-698-827   |
+| ldl | 65                | 67                | 12               | 3194-5209-8951-4409-6977 | 8775-9749-10538-9433-10580   | 3194-5209-8951-4409-6977 | 18136-27105-30032-24941-25674  | 2700-4414-7076-3740-5950 | 1986-1578-636-575-1025   |
+| sbp | 90                | 84                | 27               | 5903-5902-3412-3947-4095 | 10137 -10071-9201 -8977-9234 | 8224-8950-4089-4290-5206 | 27192 -28744-22553-19343-25955 | 6667-7076-3619-3970-4414 | 1980-1647-571-1003-703   |
+| scz | 50                | 28                | 4                | 3936-3375-2540-4542-3386 | 8486-8397-8425-8675-8695     | 4270-4400-4247-5593-4960 | 18100-22295-24656-24890-22249  | 3951-3365-4225-4349-3729 | 1018-693-770-1056-1194   |
+| wbc | 291               | 220               | 82               | 5078-5891-4790-6294-4088 | 8455-9589-9402-9943-8721     | 5530-8927-6490-9102-5185 | 15248-27095-25101-26876-24403  | 4700-7055-5281-7227-4409 | 1973-1479-1779-571-821   |
+
 
 ## aFib
 
