--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,6 +21,13 @@ editor_options:
   * [Compare DENTIST and SuSiE_RSS for LD mismatch detection on example locus with manually changed z-scores](test_LD_mismatch_DENTIST_susierss.html)
   * [Compare LD mismatch filterng on real data](compare_LD_mismatch_filtering_real_data.html)
 
+# Single-tissue 
+
+Package V2.0
+
+  * [Rerun LDL-Liver, using expression weights from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/single_tissue_ldl_liver_munro.html)
+
+
 # Multi-tissue 
 
 Package V1.0
