--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -53,6 +53,11 @@ Package V2.0
 
   * [APA QTL analysis (using APA FUSION models by Chen et al.)](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
 
+# Multi QTL analysis
+
+Package V2.0
+
+  * [Comparing results from Munro weights & predictdb weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro.html)
 
 # Simulation results
 
