--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -86,4 +86,6 @@ Package V2.0
   * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, eqtl, sqtl from predictdb; apa qtl from Chen et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_summary.html)
   * [6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro.html)
   * [Summary for 6 Traits, 5 tissues, eQTL + sQTL + apaQTL -- compute ukbb LD, all weights are from Munro et al](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights_ukbb_munro_summary.html)
+  *[Comparing results from Munro weights & predictdb weights](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_predictdb_munro_updated.html)
+  
   
