--- a/analysis/multi_group_compare_predictdb_munro_updated.Rmd
+++ b/analysis/multi_group_compare_predictdb_munro_updated.Rmd
@@ -123,7 +123,7 @@ all the PredictDB are converted from FUSION weights
 2. Parameter estimation and fine-mapping
 
 - niter_prefit = 5,
-- niter = 60,
+- niter = 30(default),
 - L: determined by uniform susie,
 - group_prior_var_structure = "shared_type",
 - maxSNP = 20000,
@@ -143,7 +143,7 @@ PredictDB (eqtl, sqtl)
 2. Parameter estimation and fine-mapping
 
 - niter_prefit = 5,
-- niter = 60,
+- niter = 30(default),
 - L: determined by uniform susie,
 - group_prior_var_structure = "shared_type",
 - maxSNP = 20000,
